# labs-gunshot-classification

./: .gitignore  README.md  pyproject.toml
features/: labels.json
metadata/: gun_sound_final_metadata.paquet
notebooks/: 00_download_datasets.ipynb  01_preprocess_audio.ipynb  03_train_model.ipynb
src/labs_gunshot_classification/: config.py  evaluate.py  model.py  preprocess.py  train.py
src/labs_gunshot_classification/artifacts/: best_model.keras
